# playox

./: .gitignore  Dockerfile  README.md  pyproject.toml
html/: index.html
playox/: app.py  game.py
tests/: test_app.py  test_game.py
